# librariesTest

json/: CMakeLists.txt  json.cpp
opencv/: CMakeLists.txt  polygon.cpp
